<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:background="@drawable/shape_bg_gradient_top">

    <TextView
        android:id="@+id/nameText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:fontFamily="@font/roboto"
        android:singleLine="true"
        android:text="@string/labib_ur_rahman"
        android:textColor="@color/mainContainer_HeadingText"
        android:textSize="@dimen/_16sp"
        android:layout_marginEnd="10dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/no"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/no"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/abc_orange_main"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewSerial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lobster_two_bold"
            android:text="15"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <TextView
        android:id="@+id/rollText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:layout_marginTop="3dp"
        android:text="511023-511075"
        android:textColor="@color/mainContainer_SubHeadingText"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/nameText"
        app:layout_constraintTop_toBottomOf="@+id/nameText" />

    <TextView
        android:id="@+id/timestampText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_2_days_ago"
        android:fontFamily="@font/roboto"
        android:textSize="14sp"
        android:layout_marginTop="2dp"
        android:textColor="@color/mainContainer_SubHeadingText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rollText" />

    <TextView
        android:id="@+id/btnResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_bg_gradient_left"
        android:fontFamily="@font/roboto"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/view_result"
        android:textStyle="bold"
        android:textSize="14sp"
        android:textColor="@color/mainContainer_HeadingText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rollText" />

</androidx.constraintlayout.widget.ConstraintLayout>
